git ignore updated

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,38 @@
 !/log/.keep
 /tmp
 .keep
+.idea/*
+
+.idea/.generators
+
+.idea/.name
+
+.idea/.rakeTasks
+
+*.xml
+
+*.xml
+
+.idea/compiler.xml
+
+.idea/copyright/profiles_settings.xml
+
+.idea/cs6440_hit_team30.iml
+
+*.xml
+
+.idea/misc.xml
+
+.idea/modules.xml
+
+.idea/workspace.xml
+
+.idea/runConfigurations/test__cs6440_hit_team30.xml
+
+.idea/vcs.xml
+
+.idea/runConfigurations/Production__cs6440_hit_team30.xml
+
+.idea/runConfigurations/Development__cs6440_hit_team30.xml
+
+app/controllers/condition_controller.rb
